--- a/src/MainBundle/Resources/views/Default/home.html.twig
+++ b/src/MainBundle/Resources/views/Default/home.html.twig
@@ -2,11 +2,11 @@
 
 {% block title %}HomePage{% endblock %}
 
+{% block body_id "img1" %}
+
 {% block body %}
 
-<div id="body" class="img1">
-
-    <div id="conteneur" class="container">
+    <div class="container">
 
         <header class="row">
 
