--- a/app/Resources/views/layout/base.html.twig
+++ b/app/Resources/views/layout/base.html.twig
@@ -6,7 +6,7 @@
     <link href="{{ asset('dist/styles.css') }}" rel="stylesheet">
     {% block stylesheets %}{% endblock %}
 </head>
-<body>
+<body id="{% block body_id %}{% endblock %}">
 {% block body %}{% endblock %}
 <script src="{{ asset('dist/script.js') }}"></script>
 {% block javascripts %}{% endblock %}
