ajout animate.scss

--- a/src/MainBundle/Resources/views/Default/home.html.twig
+++ b/src/MainBundle/Resources/views/Default/home.html.twig
@@ -30,6 +30,7 @@
         </div>
 
         <div id="ligne2" class="row">
+            <div class="col-12 bandeau-noir animated slideInRight"></div>
             <div class="col-8">hhhhhhhhhhhhhhhhhh
             </div>
             <div class="col-4">
